      been preferred), and will not be installed as from \R 2.15.0.
      
      \item \code{mem.limits()} is now deprecated: these limits are
      nowadays almost never used, and are reported by \code{gc()} when
      they are in use.
      
      \item Forms like \code{binomial(link=link)} for GLM families
      deprecated since \R 2.4.0 are now defunct.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item The base and recommended packages are now byte-compiled
      (equivalent to \command{make bytecode} in \R 2.13.x).  On a
      Unix-alike this can be disabled by configuring with
      \option{--disable-byte-compiled-packages} (although this is intended
      only for expert use and is not supported).
      
      \item Configure option \option{--with-system-zlib} now only makes
      use of the basic interface of \code{zlib} and not the
      C function \samp{gzseek} which has shown erroneous behaviour in
      \code{zlib} 1.2.4 and 1.2.5.

      \item The \code{zlib} in the R sources is now version 1.2.5.
      (This is safe even on 32-bit Linux systems because only the basic
      interface is now used.)

      \item The \file{.afm} files in package \pkg{grDevices} are now
      installed as compressed files (as long done on Windows), saving ca
      2MB on the installed size.

      \item The non-screen cairo-based devices are no longer in the X11
      module and so can be installed without X11.  (We have never seen a
      Unix-alike system with cairographics installed but not X11, but a
      user might select \option{--without-x}.)

      \item Configure will try to use \code{-fobjc-exceptions} for the
      Objective-C compiler (if present) to ensure that even compilers
      that do not enable exceptions by default (such as vanilla gcc) can
      be used.  (Objective-C is currently only used on Mac OS X.)

      \item The system call \code{times} is required.

      \item The C99 functions \code{acosh}, \code{asinh}, \code{atanh},